# GroundWater-Assistant

./: .env.example  .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REORGANIZATION.md  RESPONSE_FORMAT.md  UNUSED_FILES.md  app.py  generated_map_data.json  ingest.py  pyproject.toml  requirements.txt
api/: main.py  requirements.txt
api/routes/: chat.py  map.py  report.py
backend/: __init__.py  agent.py  config.py  ingest.py  llm.py  map_utils.py  prompts.py  report_generator.py  retriever.py  tools.py  translator.py
tests/: README.md  debug_retrieval.py  test_all_imports.py  test_citation_format.py  test_llm.py  test_pdf_generation.py  test_rag_usage.py  test_st.py  update_map_risks.py  verify_agent.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ChatArea.tsx  InteractiveMap.tsx  MessageBubble.tsx  Sidebar.tsx
